[Changed Padding on Mobile from Rem to VW to prevent Logo and Nav overcrossing and forcing the Logo onto the next line]

--- a/src/components/DesktopHeader.css
+++ b/src/components/DesktopHeader.css
@@ -11,7 +11,7 @@
 .logo {
 	width: 50vw;
 	vertical-align: middle;
-	padding: 0.5rem;
+	padding: 2vw;
 	margin: 0;
 }
 /* .mobile-hidden {
@@ -32,7 +32,7 @@ display: inline;
 	cursor: pointer;
 }
 .header_nav {
-	padding: 0.5rem;
+	padding: 2vw;
 	margin: 0rem;
 }
 .header_nav__button {
